src/test/deca/context/invalid/with-object/class_null.deca
class A {}

{
    Object o = null;
    Object o2 = (null) (o); // null is a class ?
    A a = null;

    (null) (o);
    (null) (a);
}